--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-Html Webpack Plugin:
-<pre>
-  Error: html-webpack-plugin could not minify the generated output.
-  In production mode the html minifcation is enabled by default.
-  If you are not generating a valid html output please disable it manually.
-  You can do so by adding the following setting to your HtmlWebpackPlugin config:
-  |
-  |    minify: false
-  |
-  See https://github.com/jantimon/html-webpack-plugin#options for details.
-  For parser dedicated bugs please create an issue here:
-  https://danielruf.github.io/html-minifier-terser/
-  Parse Error: <meta name="twitter:card" content=""summary_large_image""> 
-      <meta 
-        property="twitter:url" 
-        content="http://khu.edu.mn/news/62108c36aa87f4436aebe493" 
-      /> 
-      <meta name="twitter:title" content="Demo Title" /> 
-      <meta name="twitter:description" content="Demos description" /> 
-      <meta 
-        name="twitter:image" 
-        content="https://khu.edu.mn:3000/upload/news/news_2022_2_19_132220.jpg" 
-      /> 
-      <link rel="apple-touch-icon" href="/khu.png" /> 
-      <link 
-        rel="stylesheet" 
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" 
-      /> 
-      <link 
-        rel="stylesheet" 
-        href="https://fonts.googleapis.com/icon?family=Material+Icons" 
-      /> 
-      <title>Ховд их сургууль</title> 
-    </head> 
-    <body> 
-      <div id="root"></div> 
-    <script>!function(e){function r(r){for(var n,f,l=r[0],i=r[1],a=r[2],c=0,s=[];c<l.length;c++)f=l[c]  ,Object.prototype.hasOwnProperty.call(o,f)&&o[f]&&s.push(o[f][0]),o[f]=0;for(n in i)Object.prototype  .hasOwnProperty.call(i,n)&&(e[n]=i[n]);for(p&&p(r);s.length;)s.shift()();return u.push.apply(u,a||[]  ),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var i=t[l];  0!==o[i]&&(n=!1)}n&&(u.splice(r--,1),e=f(f.s=t[0]))}return e}var n={},o={1:0},u=[];function f(r){if(  n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,f),  t.l=!0,t.exports}f.m=e,f.c=n,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,  get:t})},f.r=function(e){"undefined"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Sy  mbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(e,  r){if(1&r&&(e=f(e)),8&r)return e;if(4&r&&"object"===typeof e&&e&&e.__esModule)return e;var t=Object.  create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typ  eof e)for(var n in e)f.d(t,n,function(r){return e[r]}.bind(null,n));return t},f.n=function(e){var r=  e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=functio  n(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var l=this.webpackJsonpkhufrontend=  this.webpackJsonpkhufrontend||[],i=l.push.bind(l);l.push=r,l=l.slice();for(var a=0;a<l.length;a++)r(  l[a]);var p=i;t()}([]);</script><script src="/static/js/2.943bce54.chunk.js"></script><script src="/  static/js/main.6284a3b9.chunk.js"></script></body> 
-  </html>
-  
-  - htmlparser.js:244 new HTMLParser
-    [KhuFrontEnd]/[html-minifier-terser]/src/htmlparser.js:244:13
-  
-  - htmlminifier.js:993 minify
-    [KhuFrontEnd]/[html-minifier-terser]/src/htmlminifier.js:993:3
-  
-  - htmlminifier.js:1354 Object.exports.minify
-    [KhuFrontEnd]/[html-minifier-terser]/src/htmlminifier.js:1354:16
-  
-  - index.js:1013 HtmlWebpackPlugin.minifyHtml
-    [KhuFrontEnd]/[html-webpack-plugin]/index.js:1013:46
-  
-  - index.js:429 HtmlWebpackPlugin.postProcessHtml
-    [KhuFrontEnd]/[html-webpack-plugin]/index.js:429:40
-  
-  - index.js:254 
-    [KhuFrontEnd]/[html-webpack-plugin]/index.js:254:25
-  
-  - task_queues:96 processTicksAndRejections
-    node:internal/process/task_queues:96:5
-  
-</pre>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/khu.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="ХОВД ИХ СУРГУУЛЬ"/><meta property="og:url" content="http://khu.edu.mn/news/620dc2ec0c3cacad57824aeb"/><meta property="og:type" content="website"/><meta property="og:title" content="Demo Titles"/><meta property="og:description" content="Demoooo description"/><meta property="og:image" content="http://khu.edu.mn:3000/upload/news/news_2022_2_17_103233.jpg"/><link rel="apple-touch-icon" href="/khu.png"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><title>Ховд их сургууль</title></head><body><div id="root"></div><script>!function(e){function r(r){for(var n,f,l=r[0],i=r[1],a=r[2],c=0,s=[];c<l.length;c++)f=l[c],Object.prototype.hasOwnProperty.call(o,f)&&o[f]&&s.push(o[f][0]),o[f]=0;for(n in i)Object.prototype.hasOwnProperty.call(i,n)&&(e[n]=i[n]);for(p&&p(r);s.length;)s.shift()();return u.push.apply(u,a||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var i=t[l];0!==o[i]&&(n=!1)}n&&(u.splice(r--,1),e=f(f.s=t[0]))}return e}var n={},o={1:0},u=[];function f(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,f),t.l=!0,t.exports}f.m=e,f.c=n,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(e,r){if(1&r&&(e=f(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)f.d(t,n,function(r){return e[r]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var l=this.webpackJsonpkhufrontend=this.webpackJsonpkhufrontend||[],i=l.push.bind(l);l.push=r,l=l.slice();for(var a=0;a<l.length;a++)r(l[a]);var p=i;t()}([])</script><script src="/static/js/2.943bce54.chunk.js"></script><script src="/static/js/main.6284a3b9.chunk.js"></script></body></html>
